--- a/css/styles.css
+++ b/css/styles.css
@@ -484,16 +484,15 @@ h6 {
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
-  margin-right: 24px;
   outline: none;
   padding: 8px 16px;
   color: #fff;
-}
-
-.email-input::placeholder {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+}
+
+.email-input::placeholder {
   color: #fff;
 }
 
@@ -509,15 +508,22 @@ h6 {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
-  max-width: 165px;
+  cursor: pointer;
+  min-width: 165px;
+  height: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn-field {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+}
+
+.footer-btn-icon {
+  margin-left: 16px;
+}
+
+.footer-form {
+  display: flex;
+  gap: 24px;
 }
 
 .footer-submit-btn svg {
@@ -556,7 +562,8 @@ h6 {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fcfcfc;
   border-radius: 4px;
-  padding: 24px;
+  padding: 72px 24px 24px;
+
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -579,10 +586,13 @@ h6 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: auto;
+  position: absolute;
+  top: 24px;
+  right: 24px;
   margin-bottom: 24px;
   width: 24px;
   height: 24px;
+  cursor: pointer;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -591,12 +601,14 @@ h6 {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-btn:hover {
+.close-btn:hover,
+.close-btn:focus {
   background-color: #404bbf;
   border: none;
 }
 
-.close-btn:hover .close-icon {
+.close-btn:hover .close-icon,
+.close-btn:focus .close-icon {
   fill: #fff;
 }
 
@@ -625,6 +637,10 @@ h6 {
   margin-bottom: 8px;
 }
 
+.modal-field:nth-child(4) {
+  margin-bottom: 16px;
+}
+
 .modal-label {
   display: block;
   font-size: 12px;
@@ -639,7 +655,7 @@ h6 {
   font-size: 16px;
   border-radius: 4px;
   background-color: transparent;
-  outline: none;
+  outline: transparent;
   width: 100%;
   height: 40px;
   padding-left: 38px;
@@ -663,13 +679,15 @@ h6 {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding: 8px 16px;
-  outline: none;
+  outline: transparent;
   background-color: transparent;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment-field:hover,
@@ -688,7 +706,7 @@ h6 {
 
 .tick-label {
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: flex;
@@ -706,25 +724,29 @@ h6 {
 .modal-tick-text {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 16px;
   height: 16px;
   fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tick-field:checked + .tick-label .modal-tick-text {
   background-color: #404bbf;
   border-radius: 2px;
   fill: #f4f4fd;
-  border: 1px solid #404bbf;
+  border: none;
 }
 
 .modal-submit-btn {
   border-radius: 4px;
   padding: 16px 32px;
-  width: 50%;
+  min-width: 169px;
+  height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   font-family: "Roboto", sans-serif;
@@ -734,8 +756,10 @@ h6 {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
+  cursor: pointer;
   display: block;
   margin: 0 auto;
   margin-top: calc(24px - 8px);
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
