--- a/css/styles.css
+++ b/css/styles.css
@@ -719,7 +719,7 @@ h6 {
 }
 
 .tick-label-link {
-  line-height: 1.33333;
+  line-height: 1.33;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
@@ -739,18 +739,18 @@ h6 {
   fill: transparent;
 }
 
-.tick-field:checked + .tick-label .modal-tick-text {
+.tick-field:checked + .tick-label > .modal-tick-text {
   background-color: #404bbf;
-  border-radius: 2px;
   fill: #f4f4fd;
   border: none;
 }
 
 .modal-submit-btn {
-  border-radius: 4px;
-  padding: 16px 32px;
+  display: block;
   min-width: 169px;
   height: 56px;
+  border-radius: 4px;
+  padding: 16px 32px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   font-family: "Roboto", sans-serif;
@@ -761,7 +761,6 @@ h6 {
   text-align: center;
   color: #fff;
   cursor: pointer;
-  display: block;
   margin: 0 auto;
   margin-top: calc(24px - 8px);
   border: none;
